--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -47,7 +47,7 @@
           </td> 
           <td>{{this.totalProduct}}</td>
           <td>{{this.totalProduct}}</td>
-          <td class="total-revenue">{{this.totalRevenue}}</td>
+          <td class="total-revenue">{{formatNumber this.totalRevenue}}</td>
           <td><a href="/admin/all-brands/brand/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
