--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -36,7 +36,7 @@
           <td>{{this._id}}</td>
           <td>{{this.name}}</td>
           <td>{{this.address}}</td>
-          <td class="revenue">{{this.revenue}}</td>
+          <td class="revenue">{{formatNumber this.revenue}}</td>
           <td>
             <a href="/admin/all-stores/store/{{this._id}}">Xem</a>
           </td>
