--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -28,7 +28,7 @@
       </tr>
       <tr>
         <td>Tổng doanh thu</td>
-        <td id="total-price">{{totalPrice}}</td>
+        <td id="total-price">{{formatNumber totalPrice}}</td>
       </tr>
     </table>
     <div class="submit-button">
