--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -32,7 +32,7 @@
       </tr>
       <tr>
         <td>Tổng Tiền</td>
-        <td id="total-order-price">{{order.totalOrderPrice}}</td>
+        <td id="total-order-price">{{formatNumber order.totalOrderPrice}}</td>
       </tr>
       <tr>
         <td> Trạng thái đơn </td>
