--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -120,11 +120,11 @@
       </tr>
       <tr>
         <td>Giá cũ</td>
-        <td id="old-price">{{product.oldPrice}}</td>
+        <td id="old-price">{{formatNumber product.oldPrice}}</td>
       </tr>
       <tr>
         <td>Giá mới</td>
-        <td id="new-price">{{product.price}}</td>
+        <td id="new-price">{{formatNumber product.price}}</td>
       </tr>
       <tr>
         <td>Mô tả</td>
