--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <td>Doanh thu cửa hàng</td>
-        <td class="revenue">{{storeInfo.revenue}}</td>
+        <td class="revenue">{{formatNumber storeInfo.revenue}}</td>
       </tr>
     </table>
 
