--- a/src/resource/views/users/profile.hbs
+++ b/src/resource/views/users/profile.hbs
@@ -26,9 +26,7 @@
       </div>
     </div>
 
-    <div class="content">
-      
-    </div>
+    <div class="content"></div>
 </div>   
 
 <script src="/js/user/profile.js" defer></script>
