--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -13,6 +13,7 @@ body {
   background-color: #FFDFDF;
   font-family: 'Roboto', sans-serif;
 }
+body::-webkit-scrollbar {display: none}
 .dark-mode {
   background-color: #2d3436;
   color: #D1A6A6;
@@ -87,9 +88,11 @@ body {
     }
   } 
 }
-input {
+input[type="text"], input[type="password"], input[type="date"] {
   font-family: 'Roboto', sans-serif;
+  width: 100%;
   text-indent: 10px;
+  height: 40px;
   border-radius: 5px;
   border: 1px solid #D1A6A6
 }
@@ -217,6 +220,7 @@ div.submit-button {
     border: 1px solid black;
     padding: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-sizing: border-box;
     height: fit-content;
     .form-title {
       display: flex;
@@ -234,13 +238,6 @@ div.submit-button {
       box-sizing: border-box;
       gap: 5px;
       padding: 5px 10px 5px 10px;
-      input[type="text"], input[type="password"] {
-        width: 100%;
-        height: 40px;
-        border: 1px solid #D1A6A6;
-        border-radius: 5px;
-        text-indent: 10px;
-      };
     }
   }
 }
