--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -1,14 +1,19 @@
 <div class="admin-create-purchase-container">
-  <form id="form-1" method="post" action="/admin/all-purchases/purchase/created" enctype="multipart/form-data">
-    <div class="form-title"><p>Thêm đơn nhập mới</p></div> 
+  <form id="form-1" method="post" action="/admin/all-purchases/purchase/created">
+    <div class="form-title"><p>Thêm đơn nhập mới</p></div>
+    <div class="form-group">
+      <label for="purchaseDate">Ngày nhập *</label>
+      <input type="date" id="purchaseDate" name="purchaseDate" required>
+    </div>
     <input type="text" placeholder="Nhập tên sản phẩm">
     <div class="products-match">
       {{#each products}}
-        <div class="product" style="display: none;">
+        <div class="product" style="display: none">
+          <p style="display: none" id="product-id">{{this._id}}</p>
           <p style="width: 15%">{{this.brand}}</p>
           <p 
             style="width: 65%; display:flex; align-items:center; justify-content:start; gap:5px"
-            class="product-name"
+            id="product-name"
           >
             <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
             {{this.name}}
@@ -23,18 +28,21 @@
       <thead>
         <tr>
           <td style="width:  5%;">STT</td>
-          <td style="width: 50%;">Sản Phẩm</td>
-          <td style="width: 15%;">Đơn Giá</td>
+          <td style="width: 40%;">Sản Phẩm</td>
+          <td style="width: 15%; text-align:right">Đơn Giá</td>
           <td style="width: 10%;">Số Lượng</td>
-          <td style="width: 15%;">Tổng Tiền</td>
-          <td style="width: 5%;"></td>
+          <td style="width: 15%; text-align:right">Tổng Tiền</td>
+          <td style="width: 10%;"></td>
         </tr>
       </thead>
       <tbody>
       </tbody>
       <tfoot>
-        <td colspan="4">Tổng</td>
-        <td>100000</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td style="text-align: right">0</td>
         <td></td>
       </tfoot>
     </table>  
