--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -21,8 +21,8 @@
     <a href="/all-products/product/{{this.slug}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
-        <del><p id="product-old-price">{{this.oldPrice}}</p></del>
-        <p id="product-price">{{this.price}}</p>
+        <del><p id="product-old-price">{{formatNumber this.oldPrice}}</p></del>
+        <p id="product-price">{{formatNumber this.price}}</p>
         <p id="product-details">{{this.name}}</p>
         <p id="product-rate">
           {{this.rate}}/5
