--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -29,7 +29,7 @@
     </tr>
     <tr>
       <td> Tổng Tiền </td>
-      <td id="total-order-price"> {{orderInfo.totalOrderPrice}} </td>
+      <td id="total-order-price"> {{formatNumber orderInfo.totalOrderPrice}} </td>
     </tr>
     <tr>
       <td> Trạng Thái Đơn Hàng </td>
@@ -50,9 +50,9 @@
       {{#each orderInfo.products}}
       <tr>
         <td><p>{{this.name}}</p></td>
-        <td style="text-align: center;" id="product-price">{{this.price}}</td>
+        <td style="text-align: center;" id="product-price">{{formatNumber this.price}}</td>
         <td style="text-align: center;">{{this.quantity}}</td>
-        <td style="text-align: center;" id="total-product-price">{{this.totalPrice}}</td>
+        <td style="text-align: center;" id="total-product-price">{{formatNumber this.totalPrice}}</td>
       </tr>
       {{/each}}
     </tbody>
