--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -11,8 +11,8 @@
       <a href="/all-products/product/{{this.slug}}">
         <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <del style="color: black;"><p id="product-old-price">{{this.oldPrice}}</p></del>
-          <p id="product-price">{{this.price}}</p>
+          <del style="color: black;"><p id="product-old-price">{{formatNumber this.oldPrice}}</p></del>
+          <p id="product-price">{{formatNumber this.price}}</p>
           <p id="product-details">{{this.name}}</p>
           <p id="product-rate">
             {{this.rate}}/5
@@ -41,7 +41,7 @@
       <a href="/all-products/product/{{this.slug}}">
         <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <p id="product-price">{{this.price}}</p>
+          <p id="product-price">{{formatNumber this.price}}</p>
           <p id="product-details">{{this.name}}</p>
           <p id="product-rate">
             {{this.rate}}/5
@@ -70,7 +70,7 @@
       <a href="/all-products/product/{{this.slug}}">
         <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <p id="product-price">{{this.price}}</p>
+          <p id="product-price">{{formatNumber this.price}}</p>
           <p id="product-details">{{this.name}}</p>
           <p id="product-rate">
             {{this.rate}}/5
