--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -36,10 +36,8 @@
           <td>{{this._id}}</td>
           <td>{{this.name}}</td>
           <td>{{this.address}}</td>
-          <td class="revenue">{{formatNumber this.revenue}}</td>
-          <td>
-            <a href="/admin/all-stores/store/{{this._id}}">Xem</a>
-          </td>
+          <td>{{formatNumber this.revenue}}</td>
+          <td><a href="/admin/all-stores/store/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
       </tbody>
