--- a/src/resource/views/admin/create/product.hbs
+++ b/src/resource/views/admin/create/product.hbs
@@ -5,6 +5,7 @@
     </div>
 
     <div class="form-group">
+      <label></label>
       <select name="categories">
         <option value="">-- Chọn dòng Sản Phẩm --</option>
         <option value="skincare">Skincare</option>
@@ -13,6 +14,7 @@
     </div>
 
     <div class="form-group" style="display: none;">
+      <label></label>
       <select name="skincare">
         <option value="">-- Skincare --</option>
         <option value="xit-khoang">Xịt Khoáng</option>
@@ -30,6 +32,7 @@
     </div>
 
     <div class="form-group" style="display: none;">
+      <label></label>
       <select name="makeup">
         <option value="">-- Makeup --</option>
         <option value="phan-ma">Phấn Má</option>
@@ -78,6 +81,7 @@
     </div>
 
     <div class="form-group">
+      <label></label>
       <select name="status">
         <option value="no">-- Tình Trạng Sản Phẩm --</option>
         <option value="no">Bình thường</option>
@@ -88,6 +92,7 @@
     </div>
 
     <div class="form-group">
+      <label></label>
       <select name="newArrival">
         <option value="no">-- Hàng Mới Về --</option>
         <option value="no">Không</option>
