--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -120,11 +120,11 @@
       </tr>
       <tr>
         <td>Giá cũ</td>
-        <td id="old-price">{{formatNumber product.oldPrice}}</td>
+        <td>{{formatNumber product.oldPrice}}</td>
       </tr>
       <tr>
         <td>Giá mới</td>
-        <td id="new-price">{{formatNumber product.price}}</td>
+        <td>{{formatNumber product.price}}</td>
       </tr>
       <tr>
         <td>Mô tả</td>
@@ -135,9 +135,8 @@
         <td>{{product.details}}</td>
       </tr>
     </table>
-    <div class="submit-button">
-      <button title="submit" type="submit">Cập nhật</button>
-    </div> 
+    
+    <div class="submit-button"><button title="submit" type="submit">Cập nhật</button></div> 
   </form>
 </div>
 
