--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -50,9 +50,7 @@
 
     <table id="table-1">
       <thead>
-        <tr>
-          <td colspan="2">THÔNG TIN CÁ NHÂN</td>
-        </tr>
+        <tr><td colspan="2">THÔNG TIN CÁ NHÂN</td></tr>
       </thead>
       <tr>
         <td>Tên nhân viên</td>
@@ -71,9 +69,8 @@
         <td>{{userInfo.userInfo.address}}</td>
       </tr>
     </table>
-    <div class="submit-button">
-      <button type="submit">Cập Nhật</button>
-    </div>  
+    
+    <div class="submit-button"><button type="submit">Cập Nhật</button></div>  
   </form>
 </div>   
 
