--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -129,7 +129,7 @@
           <tr>
             <td>Đơn có giá trị cao nhất</td>
             <td class="maxValueOrderNumber">{{formatNumber maxValueOrderNumber}}</td>
-            <td><a href="/admin/all-orders/{{maxValueOrderId}}">Chi tiết</a></td>
+            <td><a href="/admin/all-orders/order/{{maxValueOrderId}}">Chi tiết</a></td>
           </tr>
         </tbody>
       </table>
