--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/admin/allProducts.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/allPurchases.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/allStores.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/allSuppliers.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/body.css">
   <link rel="stylesheet" href="/css/admin/createBrand.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/createCustomer.css" media="print" onload="this.media='all'">
@@ -21,6 +22,7 @@
   <link rel="stylesheet" href="/css/admin/createProduct.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/createPurchase.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/createStore.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/createSupplier.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/detailBrand.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/detailCustomer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/detailEmployee.css" media="print" onload="this.media='all'">
@@ -28,6 +30,7 @@
   <link rel="stylesheet" href="/css/admin/detailProduct.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/detailPurchase.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/detailStore.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/admin/detailSupplier.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/home.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/profile.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/sidebar.css">
