--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -33,7 +33,7 @@
     </tr>
     <tr>
       <td> Trạng Thái Đơn Hàng </td>
-      <td> {{orderInfo.status}} </td>
+      <td> {{formatStatus orderInfo.status}} </td>
     </tr>
    </table>
 
