--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -1,10 +1,3 @@
-@import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
-@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css');
-@import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css');
-@import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css');
-@import url('https://cdn-uicons.flaticon.com/2.0.0/uicons-regular-straight/css/uicons-regular-straight.css');
-@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-thin-rounded/css/uicons-thin-rounded.css');
-@import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
 /* all pages */
@@ -211,7 +204,8 @@ div.submit-button {
 .admin-create-order-container,
 .admin-create-product-container,
 .admin-create-purchase-container,
-.admin-create-store-container {
+.admin-create-store-container,
+.admin-create-supplier-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -233,11 +227,27 @@ div.submit-button {
       };
     }
     .form-group {
-      display: grid;
+      width: 80%;
+      display: flex;
+      flex-wrap: wrap;
       margin-top: 5px;
       box-sizing: border-box;
-      gap: 5px;
+      gap: 10px;
       padding: 5px 10px 5px 10px;
+      label { 
+        width: 20%; 
+        text-align: right; 
+        align-self: center;
+        flex: 0 0 auto
+      }
+      input { 
+        width: 80%;
+        flex: 1
+      }
+      .form-message {
+        flex-basis: 100%;
+        text-align: center;
+      }
     }
   }
 }
@@ -250,7 +260,8 @@ div.submit-button {
 .product-details-container,
 .profile-details-container,
 .purchase-details-container,
-.store-details-container {
+.store-details-container,
+.supplier-details-container {
   width: 100%;
   display: flex;
   align-items: center;
@@ -271,8 +282,8 @@ div.submit-button {
     }
     #table-1 {td:first-child {width: 20%}}
     #table-2 {
-      td {text-align: center};
       tbody {
+        td {text-align: center};
         td:nth-child(1) {
           p {
             overflow: hidden;
