--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -32,16 +32,16 @@
 
       <tbody>
         {{#each customersWithOrders}}
-        <tr>
-          <td>{{addIndex @index 1}}</td>
-          <td>{{this._id}}</td>
-          <td>{{this.userInfo.name}}</td>
-          <td>{{this.userInfo.address}}</td>
-          <td>{{this.totalOrder}}</td>
-          <td class="total-price">{{formatNumber this.totalPrice}}</td>
-          <td><a href="/admin/all-customers/customer/{{this._id}}">Xem</a></td>
-        </tr>
-        {{/each}}
+          <tr>
+            <td>{{addIndex @index 1}}</td>
+            <td>{{this._id}}</td>
+            <td>{{this.userInfo.name}}</td>
+            <td>{{this.userInfo.address}}</td>
+            <td>{{this.totalOrder}}</td>
+            <td>{{formatNumber this.totalPrice}}</td>
+            <td><a href="/admin/all-customers/customer/{{this._id}}">Xem</a></td>
+          </tr>
+          {{/each}}
       </tbody>
     </table>
   </div>
