--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-employees-container">  
   <div class="board-title">
-    <p>Tổng nhân sự: {{totalEmployees}}</p>
+    <p>Tổng nhân sự: {{totalEmployee}}</p>
   </div>
 
   <div class="filter-and-create">
@@ -24,32 +24,29 @@
           <td style="width: 15%">Mã nhân viên </td>
           <td style="width: 20%">Tên nhân viên</td>
           <td style="width: 10%">Email        </td>
-          <td style="width: 15%">Địa chỉ      </td>
+          <td style="width: 30%">Địa chỉ      </td>
           <td style="width: 10%">Chức vụ      </td>
-          <td style="width: 15%">Cửa hàng     </td>
           <td style="width: 10%">Chi tiết     </td>
         </tr>
       </thead>
 
       <tbody>
         {{#each employees}}
-        <tr>
-          <td>{{addIndex @index 1}}</td>
-          <td>{{this._id}}</td>
-          <td>{{this.userInfo.name}}</td>
-          <td>{{this.loginInfo.email}}</td>
-          <td>{{this.userInfo.address}}</td>
-          <td>{{this.loginInfo.role}}</td>
-          <td>{{this.userInfo.storeId}}</td>
-          <td><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
-        </tr>
+          <tr>
+            <td>{{addIndex @index 1}}</td>
+            <td>{{this._id}}</td>
+            <td>{{this.userInfo.name}}</td>
+            <td>{{this.loginInfo.email}}</td>
+            <td>{{this.userInfo.address}}</td>
+            <td>{{this.loginInfo.role}}</td>
+            <td><a href="/admin/all-employees/employee/{{this._id}}">Xem</a></td>
+          </tr>
         {{/each}}
       </tbody>
     </table>
   </div>
 
-  <span class="pagination">
-  </span>
+  <span class="pagination"></span>
 </div>
 
 <script src="/js/admin/all/employee.js" defer></script>
