--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -1,6 +1,6 @@
 <div class="admin-all-orders-container">  
   <div class="board-title">
-    <p>Tổng Đơn Hàng: {{orderLength}}</p>
+    <p>Tổng Đơn Hàng: {{totalOrder}}</p>
   </div>
 
   <div class="filter-and-create">
@@ -22,24 +22,24 @@
       <thead>
         <tr>
           <td style="width:  5%">STT           </td>
-          <td style="width: 15%">Mã Đơn Hàng   </td>
-          <td style="width: 15%">Tên Khách Hàng</td>
-          <td style="width: 25%">Tổng Số Tiền  </td>
-          <td style="width: 25%">Ngày Đặt Hàng </td>
-          <td style="width:  5%">Tình Trạng    </td>
+          <td style="width: 20%">Mã Đơn Hàng   </td>
+          <td style="width: 20%">Tên Khách Hàng</td>
+          <td style="width: 10%">Tổng Số Tiền  </td>
+          <td style="width: 15%">Ngày Đặt Hàng </td>
+          <td style="width: 20%">Tình Trạng    </td>
           <td style="width: 10%">Chi tiết      </td>
         </tr>
       </thead>
 
       <tbody>
-        {{#each order}}
+        {{#each orders}}
         <tr>
           <td>{{addIndex @index 1}}</td>
           <td>{{this._id}}</td>
           <td>{{this.customerInfo.name}}</td>
-          <td id="total-order-price">{{formatNumber this.totalOrderPrice}}</td>
+          <td>{{formatNumber this.totalOrderPrice}}</td>
           <td>{{formatDate this.createdAt}}</td>
-          <td>{{this.status}}</td>
+          <td>{{formatStatus this.status}}</td>
           <td><a href="/admin/all-orders/order/{{this._id}}">Xem</a></td>
         </tr>
         {{/each}}
