--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -1,8 +1,72 @@
 <div class="admin-create-order-container">
-  <form id="form-1" method="post" action="/admin/all-orders/order/created" enctype="multipart/form-data">
+  <form id="form-1" method="post" action="/admin/all-orders/order/created">
     <div class="form-title">
       <p>Thêm đơn hàng mới</p>
     </div>
+    <div class="form-group">
+      <label for="purchaseDate">Ngày nhập *</label>
+      <input type="date" id="purchaseDate" name="purchaseDate" required>
+      <span class="form-message"></span>
+    </div>
+    <div class="form-group">
+      <label for="name">Chọn nhà cung cấp</label>
+      <select name="supplierId" id="supplierId" required>
+        <option value="" selected disabled>-- Nhà cung cấp --</option>
+        {{#each suppliers}}
+          <option value="{{this._id}}">{{this.name}} {{this.phone}}</option>
+        {{/each}}
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="note">Ghi chú</label>
+      <input type="text" id="note" name="note">
+      <span class="form-message"></span>
+    </div>
+    <div class="form-group">
+      <label>Chọn sản phẩm</label>
+      <input type="text"  id="product-search" placeholder="Nhập tên sản phẩm">
+      <span class="form-message"></span>
+    </div>
+    <div class="products-match">
+      {{#each products}}
+        <div class="product" style="display: none">
+          <p style="display: none" id="product-id">{{this._id}}</p>
+          <p style="width: 15%">{{this.brand}}</p>
+          <p 
+            style="width: 65%; display:flex; align-items:center; justify-content:start; gap:5px"
+            id="product-name"
+          >
+            <img src="{{this.img.path}}" alt="{{this.name}}" loading="lazy" loading="lazy"> 
+            {{this.name}}
+          </p>  
+          <p style="width: 10%;">{{this.categories}}</p>
+          <p style="width: 10%; text-align:right" id="product-price">{{this.purchasePrice}}</p>
+        </div>
+      {{/each}}
+    </div>
+
+    <table>
+      <thead>
+        <tr>
+          <td style="width:  5%;">STT</td>
+          <td style="width: 40%;">Sản Phẩm</td>
+          <td style="width: 15%; text-align:right">Đơn Giá</td>
+          <td style="width: 10%;">Số Lượng</td>
+          <td style="width: 15%; text-align:right">Tổng Tiền</td>
+          <td style="width: 10%;"></td>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+      <tfoot>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td style="text-align: right">0</td>
+        <td></td>
+      </tfoot>
+    </table>  
 
     <div class="submit-button">
       <button title="submit" type="submit">Hoàn thành</button>
