--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -4,8 +4,27 @@
     <div class="form-group">
       <label for="purchaseDate">Ngày nhập *</label>
       <input type="date" id="purchaseDate" name="purchaseDate" required>
+      <span class="form-message"></span>
     </div>
-    <input type="text" placeholder="Nhập tên sản phẩm">
+    <div class="form-group">
+      <label for="name">Chọn nhà cung cấp</label>
+      <select name="supplierId" id="supplierId" required>
+        <option value="" selected disabled>-- Nhà cung cấp --</option>
+        {{#each suppliers}}
+          <option value="{{this._id}}">{{this.name}} {{this.phone}}</option>
+        {{/each}}
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="note">Ghi chú</label>
+      <input type="text" id="note" name="note">
+      <span class="form-message"></span>
+    </div>
+    <div class="form-group">
+      <label>Chọn sản phẩm</label>
+      <input type="text"  id="product-search" placeholder="Nhập tên sản phẩm">
+      <span class="form-message"></span>
+    </div>
     <div class="products-match">
       {{#each products}}
         <div class="product" style="display: none">
@@ -19,7 +38,7 @@
             {{this.name}}
           </p>  
           <p style="width: 10%;">{{this.categories}}</p>
-          <p style="width: 10%; text-align:right" id="product-price">{{this.price}}</p>
+          <p style="width: 10%; text-align:right" id="product-price">{{this.purchasePrice}}</p>
         </div>
       {{/each}}
     </div>
