--- a/src/resource/views/admin/create/store.hbs
+++ b/src/resource/views/admin/create/store.hbs
@@ -1,23 +1,23 @@
 <div class="admin-create-store-container">
-  <form id="form-1" method="post" action="/admin/all-stores/store/created" enctype="multipart/form-data">
+  <form id="form-1" method="post" action="/admin/all-stores/store/created">
     <div class="form-title">
       <p>Thêm cửa hàng mới</p>
     </div>
 
     <div class="form-group">
-      <label for="name">Tên cửa hàng</label>
+      <label for="name">Tên cửa hàng *</label>
       <input type="text" class="form-control" id="name" name="name" placeholder="VD: Bunny House Thanh Xuân">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="address">Địa chỉ cửa hàng</label>
+      <label for="address">Địa chỉ cửa hàng *</label>
       <input type="text" class="form-control" id="address" name="address" placeholder="VD: Thanh Xuân, Hà Nội">
       <span class="form-message"></span>
     </div>
 
     <div class="form-group">
-      <label for="details">Thông tin cửa hàng</label>
+      <label for="details">Thông tin cửa hàng *</label>
       <input type="text" class="form-control" id="details" name="details" placeholder="VD: Cửa hàng to, rộng rãi với 500m2">
       <span class="form-message"></span>
     </div>
