--- a/src/resource/views/partials/adminSidebar.hbs
+++ b/src/resource/views/partials/adminSidebar.hbs
@@ -15,11 +15,12 @@
     <a href="/admin/all-customers" class="sidebar-button" id="customers"><i class="fi fi-rr-users"></i><p>Khách hàng</p></a>
     <a href="/admin/all-chats" class="sidebar-button" id="chats"><i class="fi fi-rr-comment"></i></i><p>Chat</p></a>
     <a href="/admin/all-purchases" class="sidebar-button" id="purchases"><i class="fi fi-rr-file-import"></i><p>Nhập hàng</p></a>
-    <a href="/admin/all-orders" class="sidebar-button" id="orders"><i class="fi fi-rr-piggy-bank"></i><p>Xuất Hàng</p></a>
+    <a href="/admin/all-orders" class="sidebar-button" id="orders"><i class="fi fi-rr-piggy-bank"></i><p>Bán Hàng</p></a>
     <a href="/admin/all-stores" class="sidebar-button" id="stores"><i class="fi fi-rr-store-alt"></i><p>Cửa hàng</p></a>
     <a href="/admin/all-products?page=1&type=" class="sidebar-button" id="products"><i class="fi fi-rr-box-open"></i><p>Sản Phẩm</p></a>
-    <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-users"></i><p>Nhân sự</p></a>
-    <a href="/admin/all-brands" class="sidebar-button" id="brands"><i class="fi fi-rr-supplier"></i></i></i><p>Đối tác</p></a>
+    <a href="/admin/all-employees" class="sidebar-button" id="employees"><i class="fi fi-rr-employees"></i><p>Nhân sự</p></a>
+    <a href="/admin/all-suppliers" class="sidebar-button" id="suppliers"><i class="fi fi-rr-supplier"></i><p>Đối tác</p></a>
+    <a href="/admin/all-brands" class="sidebar-button" id="brands"><i class="fi fi-rr-brand"></i><p>Thương hiệu</p></a>
     <a href="/admin/all-products/trash" class="sidebar-button" id="trash"><i class="fi fi-rr-trash"></i><p>Kho</p></a>
     <a href="/admin/profile" class="sidebar-button" id="profile"><i class="fi fi-rr-circle-user"></i><p>Thông Tin Cá Nhân</p></a>
     <a href="/admin/log-out" class="sidebar-button" id="log-out"><i class="fi fi-rr-exit"></i><p>Đăng Xuất</p></a>
